--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ngaox/padup",
+  "name": "padup",
   "version": "1.0.1",
   "description": "Lightweight css framework for rapidly and easily build nice looking user interfaces",
   "main": "scss/padup.scss",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/rabraghib/ngaox#readme",
   "devDependencies": {
+    "@types/node": "^17.0.10",
     "autoprefixer": "^10.3.4",
     "clean-css": "^5.1.5",
     "fs-extra": "^10.0.0",
